# Noodles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua  xmake_generate_vs_project.ps1  xmake_install.ps1
Demo/: Demo.sln
Demo/Demo/: Demo.vcxproj  main.cpp
Noodles/: CMakeLists.txt  Noodles.ixx  NoodlesArcheType.cpp  NoodlesArcheType.ixx  NoodlesArchetype.cpp  NoodlesArchetype.ixx  NoodlesAutomaticSystem.ixx  NoodlesBitFlag.cpp  NoodlesBitFlag.ixx  NoodlesChunk.cpp  NoodlesChunk.ixx  NoodlesClassBitFlag.cpp  NoodlesClassBitFlag.ixx  NoodlesClassBitflag.cpp  NoodlesComponent.cpp  NoodlesComponent.ixx  NoodlesContext.cpp  NoodlesContext.ixx  NoodlesEntity.cpp  NoodlesEntity.ixx  NoodlesGlobalContext.cpp  NoodlesGlobalContext.ixx  NoodlesMemory.cpp  NoodlesMemory.ixx  NoodlesMisc.cpp  NoodlesMisc.ixx  NoodlesQuery.cpp  NoodlesQuery.ixx  NoodlesSingleton.cpp  NoodlesSingleton.ixx  NoodlesSystem.cpp  NoodlesSystem.ixx  NoodlesTypeGroup.h  implement.h  interface.h
Noodles/Implement/: component_pool.cpp  component_pool.h  entity.cpp  entity.h  event_pool.cpp  event_pool.h  gobal_component_pool.cpp  gobal_component_pool.h  implement.cpp  implement.h  memory.cpp  memory.h  platform.cpp  system_pool.cpp  system_pool.h
Noodles/Interface/: aid.h  component_interface.h  entity_interface.h  event_interface.h  gobal_component_interface.h  interface.h  system_interface.h
Noodles/Platform/Windows/Form/: form.cpp  form.ixx
Noodles/Platform/Windows/WinForm/: NoodlesWinForm.cpp  NoodlesWinForm.ixx
Noodles/Public/: NoodleEntity.h  NoodleTypeInfo.h
Noodles/include/: entity.h  event_pool.h  gobal_component_pool.h  interface.h  platform.h  system_pool.h
Noodles/source/: component_pool.cpp  entity.cpp  event_pool.cpp  gobal_component_pool.cpp  memory.cpp  platform.cpp  system_pool.cpp
Potato/: auto_adapter.h  character_encoding.cpp  character_encoding.h  document.cpp  document.h  intrusive_ptr.h  lexical.cpp  smart_pointer.h  syntax.cpp  syntax.h  tmp.h  tool.cpp  tool.h
Private/: NoodlesMemory.cpp
Public/: NoodlesMemory.h  NoodlesTypeInfo.h
Test/: NoodlesArchetypeTest.cpp  NoodlesComponentTest.cpp  NoodlesContextTest.cpp  NoodlesEntityTest.cpp  NoodlesFormTest.cpp  NoodlesQueryTest.cpp  NoodlesSingletonTest.cpp  NoodlesSystemTest.cpp  NoodlesTest.cpp
cmake/: NoodlesConfig.cmake
src/: CMakeLists.txt  NoodlesEntity.cpp  NoodlesMemory.cpp
test/: CMakeLists.txt  UnitTest.cpp
(+30 files in other folders)
